<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_background"
    android:fitsSystemWindows="true"
    tools:context=".Activity.SubjectDetailActivity">

    <!-- HEADER with Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_yellow"
            app:titleTextColor="@color/primary_blue" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- CORRECTED: Re-adding the Tabs section carefully -->
    <LinearLayout
        android:id="@+id/tabsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_tabs_container"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <TextView
            android:id="@+id/tabTheory"
            style="@style/SubjectDetailTab"
            android:drawableTop="@drawable/ic_launcher_foreground"
            android:text="@string/tab_theory" />

        <TextView
            android:id="@+id/tabDocument"
            style="@style/SubjectDetailTab"
            android:drawableTop="@drawable/ic_launcher_foreground"
            android:text="@string/tab_document" />

        <TextView
            android:id="@+id/tabExam"
            style="@style/SubjectDetailTab"
            android:drawableTop="@drawable/ic_launcher_foreground"
            android:text="@string/tab_exam" />

        <TextView
            android:id="@+id/tabQuickGame"
            style="@style/SubjectDetailTab"
            android:drawableTop="@drawable/ic_launcher_foreground"
            android:text="@string/tab_quick_game" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChapters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tabsLayout"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        tools:listitem="@layout/list_item_chapter" />

    <com.example.myapplication.Component.CustomBottomNav
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>