<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/light_gray_background"
    tools:context=".Activity.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_yellow"
            app:title="@string/title_activity_settings"
            app:titleTextColor="@color/primary_blue" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav">

        <TextView
            android:id="@+id/setting_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_change_password"
            android:padding="16dp"
            android:textSize="16sp"
            android:background="@color/white"
            android:drawableEnd="@android:drawable/ic_media_play"/>

        <TextView
            android:id="@+id/setting_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/setting_logout"
            android:padding="16dp"
            android:textSize="16sp"
            android:background="@color/white"
            android:textColor="@color/subject_red"/>

    </LinearLayout>

    <com.example.myapplication.Component.CustomBottomNav
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>