<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_background"
    android:fitsSystemWindows="true"
    tools:context=".Activity.FlashcardActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_yellow"
            app:title="@string/title_activity_flashcard"
            app:titleTextColor="@color/primary_blue" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/flashcardContainer"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="32dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@+id/btnNextCard">

        <!-- Front of the Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardFront"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/tvFront"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/primary_blue" 
                tools:text="Hello" />
        </androidx.cardview.widget.CardView>

        <!-- Back of the Card (initially invisible) -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            app:cardBackgroundColor="@color/primary_blue"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/tvBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:text="Xin chào" />
        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flip_card"
        android:textColor="@color/color_text"
        app:layout_constraintTop_toBottomOf="@id/flashcardContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNextCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="16dp"
        android:text="@string/next_card"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>